--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ ul li a:hover{
     color: black;
 }
 .Logo h1{
-    color: #8016b1;
+    color: #6eff0e;
     font-weight: normal;
     font-size: 30px;
     float: left;
