--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: Century Gothic;
 }
 header{
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(Background_Image.jpg);
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
     height: 100vh;
     background-size: cover;
     background-position: center;
