--- a/style.css
+++ b/style.css
@@ -4,10 +4,22 @@
     font-family: Century Gothic;
 }
 header{
-    background-image: linear-gradient(to right bottom, #051937, #001d30, #001e20, #001c11, #131805);
+    background: linear-gradient(to right bottom, #051937, #001d30, #001e20, #001c11, #131805);
     height: 100vh;
     background-size: cover;
     background-position: center;
+    animation: gradient 15s ease infinite;
+}
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 ul{
     list-style-type: none;
