--- a/style.css
+++ b/style.css
@@ -3,11 +3,9 @@
     padding: 0px;
     font-family: Century Gothic;
 }
-header{
+body{
     background: linear-gradient(to right bottom, #051937, #001d30, #001e20, #001c11, #131805);
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
+    background-size: 100%;
     animation: gradient 15s ease infinite;
 }
 @keyframes gradient {
