--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     background: linear-gradient(to right bottom, #051937, #001d30, #001e20, #001c11, #131805);
-    background-size: 100%;
+    background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
 @keyframes gradient {
