--- a/style.css
+++ b/style.css
@@ -5,18 +5,17 @@
 }
 body{
     background: linear-gradient(to right bottom, #051937, #001d30, #001e20, #001c11, #131805);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    background-size: 100vw 100vh;
 }
 @keyframes gradient {
 	0% {
-		background-position: 0% 50%;
+		background-position: 0vw 50vh;
 	}
 	50% {
-		background-position: 100% 50%;
+		background-position: 100vw 50vh;
 	}
 	100% {
-		background-position: 0% 50%;
+		background-position: 0vw 50%;
 	}
 }
 ul{
