--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{
     background: linear-gradient(to right bottom, #051937, #001d30, #001e20, #001c11, #131805);
     background-size: 100vw 100vh;
-    animation-name: gardient;
+    animation-name: gradient;
 }
 @keyframes gradient {
 	0% {
