--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ ul li a:hover{
 .Logo h1{
     color: #6eff0e;
     font-weight: normal;
+    font-family: "Brush Script MT", cursive;
     font-size: 30px;
     float: left;
     padding: 5px 20px;
