--- a/style.css
+++ b/style.css
@@ -4,12 +4,15 @@
     font-family: Century Gothic;
 }
 body{
+    width: 100%;
+    height: 100%;
     background: linear-gradient(to right bottom,  #2e12a2, #000000);
     background-size: 200vw 200vh;
     animation-name: gradient;
     animation-duration: 8s;
     animation-timing-function: ease;
     animation-iteration-count: infinite;
+    
 }
 @keyframes gradient {
 	0% {
@@ -31,7 +34,7 @@ ul{
 ul li{
     display: inline-block;
     margin-right: 5px;
-}
+}   
 ul li a{
     text-decoration: none;
     color: white;
@@ -51,20 +54,25 @@ ul li a:hover{
     float: left;
     padding: 5px 20px;
 }
-.Title{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+
+
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    scroll-snap-align: center;
 }
-.Title h1{
+
+section h1{
     color: white;
-    font-size: 60px;
+    font-size: 4rem;
 }
-.TitleDesc{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+
+section h2{
+    font-size: 1.5rem;
     color: cornflowerblue;
 }
