--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
     padding: 0px;
     font-family: Century Gothic;
 }
+html {
+    scroll-behavior: smooth;
+  }
 body{
     width: 100%;
     height: 100%;
     background: linear-gradient(to right bottom,  #2e12a2, #000000);
-    background-size: 200vw 200vh;
+    background-size: 210vw 210vh;
     animation-name: gradient;
     animation-duration: 8s;
     animation-timing-function: ease;
@@ -41,6 +44,7 @@ ul li a{
     padding: 5px 20px;
     border: 1px solid transparent;
     transition: 0.6s ease;
+    
 }
 ul li a:hover{
     background-color: white;
