--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ section h2{
     color: cornflowerblue;
 }
 #scroll {
-    background: linear-gradient(to right bottom,  #60f808, #a30505);
+    background: linear-gradient(to right bottom,  #d34a0b, #550303);
     background-size: 210vw 210vh;
     animation-name: gradient;
     animation-duration: 8s;
