--- a/style.css
+++ b/style.css
@@ -1,89 +1,100 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: Century Gothic;
-}
-html {
-    scroll-behavior: smooth;
-  }
-body{
-    width: 100%;
+body, html{
     height: 100%;
-    background: linear-gradient(to right bottom,  #2e12a2, #000000);
-    background-size: 210vw 210vh;
-    animation-name: gradient;
-    animation-duration: 8s;
-    animation-timing-function: ease;
-    animation-iteration-count: infinite;
+    margin: 0;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    line-height: 1.8em;
+    color: #666;
 }
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+
+.img1, .img2, .img3 {
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    background-attachment: fixed;
 }
-ul{
+
+.img1 {
+    background-image:url("images/bg1.jpg");
+    min-height: 100%;
+}
+
+.img2 {
+    background-image:url("images/bg2.jpg");
+    min-height: 400px;
+}
+
+.img3 {
+    background-image:url("images/bg3.jpg");
+    min-height: 400px;
+}
+
+.section{
+    text-align: center;
+    padding: 50px 80px;
+}
+
+.section-light{
+    background-color: #f4f4f4;
+    color: #666;
+}
+
+.section-dark{
+    background-color: #282e34;
+    color: #ddd;
+}
+
+.text{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: #000000;
+    font-size: 27px;
+    letter-spacing: 8px;
+    text-transform: uppercase;
+}
+
+.text .border{
+    background-color: rgba(25, 6, 128, 0.74);
+    color: #fff;
+    padding: 20px;
+}
+
+
+.text .border.trans{
+    background-color: transparent;
+}
+
+.nav-links{
     list-style-type: none;
-    float: right;
-    margin-top: 20px;
-    margin-right: 20px;
+    position: fixed;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100%;
+    background-color: rgb(68, 5, 104);
+    z-index:300;
 }
-ul li{
+
+.nav-links li{
+    float: none;
+    top: 50%;
+    left: 50%;
     display: inline-block;
     margin-right: 5px;
-}   
-ul li a{
+}
+
+.nav-links li a{
+    display: block;
     text-decoration: none;
+    text-align: center;
     color: white;
-    padding: 5px 20px;
+    padding: 5px 16px;
     border: 1px solid transparent;
     transition: 0.6s ease;
-    
-}
-ul li a:hover{
-    background-color: white;
-    color: black;
-}
-.Logo h1{
-    color: #6eff0e;
-    font-weight: normal;
-    font-family: "Brush Script MT", cursive;
-    font-size: 35px;
-    float: left;
-    padding: 5px 20px;
-}
-
-
-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-    height: 100vh;
-    scroll-snap-align: center;
-}
-
-section h1{
-    color: white;
-    font-size: 4rem;
-}
-
-section h2{
-    font-size: 1.5rem;
-    color: cornflowerblue;
-}
-#scroll {
-    background: linear-gradient(to right bottom,  #d34a0b, #550303);
-    background-size: 210vw 210vh;
-    animation-name: gradient;
-    animation-duration: 8s;
-    animation-timing-function: ease;
-    animation-iteration-count: infinite;
 }
